--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,37 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  padding-left: 2vw;
+  padding-top: 2vh;
+  min-height: 98vh;
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color:  #000000;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:	#F8F8FF;  /* GHOST FUCKING WHITE */
+}
+
+.App-logo {
+  font-size:200px;
+  color: 	#E4007C;
+}
+
+.App-bottom {
+  vertical-align: bottom;
+}
+
+h1 {
+  color: 	#303030;
 }
 
 .App-link {
-  color: #61dafb;
+  color: 	#E4007C; /* Mexican pink - love it - orig color #61dafb;*/
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.UptimeInput {
+  text-align:right;
 }
