--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,9 @@
 .App {
-  padding-left: 2vw;
-  padding-top: 2vh;
-  min-height: 98vh;
+  min-height: 100vh;
 }
 
 .App-header {
   background-color:  #000000;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,8 +17,14 @@
   color: 	#E4007C;
 }
 
-.App-bottom {
-  vertical-align: bottom;
+.App-notes {
+  padding: 20px;
+  background-color: #c0c0c0;
+  min-height: 100vh;
+}
+
+.App-main {
+  padding: 20px;
 }
 
 h1 {
@@ -30,8 +33,15 @@ h1 {
 
 .App-link {
   color: 	#E4007C; /* Mexican pink - love it - orig color #61dafb;*/
+  text-decoration: underline;
 }
 
-.UptimeInput {
+.App-result {
+  padding: 15px;
+}
+
+input.UptimeInput {
   text-align:right;
+  padding-right: 2rem;
+  padding: 0.5rem, 2rem;
 }
